Fixed some errors and added black and white figures

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -15,7 +15,7 @@ This section is used to discuss some of the shortcomings in the current version 
 Ideally the shared memory segments containing the client list should be resizeable and its size should depend on the number of connected clients. This proved difficult and I was not able to implement it. M. Kerrisk explains in his book "The Linux Programming Interface" \cite{kerrisk2010linux} that most UNIX implementations does not support resizing of a memory map like the shared memory segments used in the sensor server implementation. There is however a non-portable and Linux specific system call named \texttt{mremap()} that can be used on Linux systems for this purpose. Unfortunately the address returned by \texttt{mremap()} might be different from the old address to the shared memory segment. This would mean that pointer inside the shared segment might no longer be valid after a resize operation has been done. A way to avoid this problem caused by the remapping would be to use offsets instead of pointers when referring to addresses in the mapped region. While troubleshooting problems I had using \texttt{mremap()}, I stumbled upon a bug report in the the Kernel Bug Tracker \cite{BUG_TRACK} reported by someone with similar issues as I was having. This indicated that the trouble I was having might be because of a bug in the Linux kernel. I have yet to confirm this but it did convince me to leave the implementation with its shortcomings rather than potentially wasting my time on something way out of my reach. The waste of memory would never by substantial anyway considering that the size of the \texttt{client\_table\_entry} struct is a modest 4664 bytes. 
 
 \subsection{Atomic clock management}
-The Sensor Server should have had a separate process that handled the filters and communication with the atomic clock. This would free the processes handling the connections, from dealing with the filters and make the filter abstraction more complete and make the atomic clock model cleaner. The atomic clock model is already logically separated from the filters associated with it, but because of the way the code is organized, the use of the model implies the use of the filter. The atomic clock should still communicate with the atomic clock on its own like it does today, retrieving telemetry data, but the aforementioned process could keep track of the atomic clock's discipline status, steering and other functionality thus creating a more generic way for the system to communicate with the atomic clock. The GPS based filter could greatly benefit from this approach, as they today are not currently doing anything but log occurrences where they were triggered. 
+The sensor server should have used a separate process to handle the filters and communication with the atomic clock. This would free the processes handling the connections to clients from dealing with the filters and make the filter abstraction more complete. This would also make the clock model cleaner. The atomic clock model is already logically separated from the filters associated with it, but because of the way the code is organized the use of the model implies the use of the filter. The atomic clock controller should still communicate with the atomic clock on its own like it does today, retrieving telemetry data, but the aforementioned process could keep track of the atomic clock's discipline status, steering and other functionality thus creating a more generic way for the system to communicate with the atomic clock. The GPS based filter could greatly benefit from this approach as it today is not currently doing anything but log occurrences where they were triggered. 
 
 \subsection{External MJD calculation}
 Modified Julian Day (MJD) is a way to express both date and time as a single number. It's convenient when doing calculations with dates, for example: the difference between the MJD for one day and the next, is exactly 1\footnote{For example, the MJD for 24/10-2016 00:00 is 57685.0 and the MJD for 25/10-2016 00:00 is 57685.0. 12'o clock at the 25/10 would be 57658.5}. Modified Julian Date is heavily relied on by the clock model (see \ref{clock_model_harald} for more about the clock model). During testing of the Sensor Server software, a python script (see \ref{get_mjd} for more about this script)was used to calculate MJD. This script was scheduled to be replaced by a module written in C, but was left in use because of time constraints. The script is called upon by using \texttt{popen()} which in turn calls fork() to run the script. The clock model is updated every second which means that this script is also invoked every second. This is of course very counterintuitive considering one of our goals for the software was to emphasize efficiency
