--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -24,7 +24,7 @@
 \usepackage{rotating}
 \usepackage{verbatim}
 
-\usemintedstyle{friendly}
+\usemintedstyle{bw}
 
 \newmintedfile[pythoncode]{python}{
 fontsize=\scriptsize,
@@ -148,7 +148,7 @@ texcl=false,
 \setcounter{secnumdepth}{5}
 \newenvironment{code}{\captionsetup{type=listing}}{}
 
-\title{GPS Time Spoofing}
+\title{Spoof proof GPS timing}
 \subtitle{A detection and mitigation system for GPS time spoofing}
 \author{Aril Johannes Schultzen}
 \begin{document}
